--- a/public/api/package.json
+++ b/public/api/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "node-cron": "^2.0.3",
+    "node-schedule": "^1.3.2"
   }
 }
